Forgot to add back Trident support from 1.12 port

--- a/src/1.16.5/resources/config.yml
+++ b/src/1.16.5/resources/config.yml
@@ -37,9 +37,8 @@ ProtectedWorlds:
 #These entities are immune regardless of any perm/toggle.
 ProtectedEntities:
   - NULL
-  - CAT
+  - COW
   - ITEM_FRAME
-  - GLOW_ITEM_FRAME
   - PAINTING
 
 
