--- a/src/1.12.2/resources/plugin.yml
+++ b/src/1.12.2/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: BombasticProjectiles
 version: '1.0.7'
-main: me.sintaxlabs.bombasticProjectiles121x.main
+main: me.sintaxlabs.bombasticProjectiles112.main
 api-version: '1.12'
 
 permissions:
