--- a/Documentation/CONFIG.yml
+++ b/Documentation/CONFIG.yml
@@ -9,52 +9,74 @@
 #                 General Options               #
 #-----------------------------------------------#
 
-require-Permission: false
 #If true, Permissions and Features must be both granted/enabled.
 #Permissions do not limit mobs if mob-explode toggles are enabled.
+RequirePermission: false
 
-impact-Custom: false
-#Allows custom explosive impact for each projectile.
-#If enabled, impact-all will be ignored. Vice Versa.
+#Explosive Power for every projectile.
+#MobImpact and CustomImpact override Global if either are enabled.
+GlobalImpact: 5
 
-impact-All: 5
-#Requires impact-Custom to be false.
-#0 = No Impact
-#127 = Max Impact
+#If enabled, GlobalImpact will be ignored. Vice Versa.
+CustomImpact: false
 
+#These blocks are immune regardless of any perm/toggle.
+ProtectedBlocks:
+  - NULL
+  - CHEST
+  - TRAPPED_CHEST
+  - BEACON
+
+#BP will not operate in any world of your choice.
+ProtectedWorlds:
+  - NULL
+  - world_peaceful
+  - world_plots
+  - uhc_oasis
+
+#These entities are immune regardless of any perm/toggle.
+ProtectedEntities:
+  - NULL
+  - COW
+  - ITEM_FRAME
+  - PAINTING
 
 
 #-----------------------------------------------#
 #               Explosion Features              #
 #-----------------------------------------------#
 
-toggle-Fire: false
 #Similar to Ghast fireball explosions.
+Fire: false
 
-toggle-BreakBlocks: true
-#NOTE: To prevent block-damage in WorldGuard Regions, set other-explosions to false in your Region Flags.
+#Should destroyed blocks drop into items?
+DropItems: false
+
+#NOTE: Players cannot bypass WorldGuard Region but Mobs can,To fix that, set other-explosions to false in your Region Flags.
 #/rg info regionName then Flags.
+#PlayerBreakBlock Toggle does NOT bypass permissions if permission is are Required.
+MobBreakBlocks: true
+PlayerBreakBlocks: true
 
-toggle-HurtMobs: false
-toggle-HurtPlayer: false
-#Blocks explosive damage from harming mobs or players.
-
+#This ONLY prevents BP Explosive Damage. Any entity can still get hurt by players hitting or any other regular explosions.
+HurtMobs: false
+HurtPlayer: false
+HurtNamedMobs: false
 
 
 #-----------------------------------------------#
 #                   Mob Options                 #
 #-----------------------------------------------#
 
+#Mobs can trigger the explosive EFFECT if they hit an entity or block.
+#They are still limited by BreakBlocks and hurting other mobs/players.
 mobs-Explode-Entities: false
 mobs-Explode-Blocks: false
-#Mobs can trigger explosions if their corresponding item is enabled.
-#They are still limited by toggle-BreakBlocks and hurting other mobs/players.
 
-Mob-Impact: false
-#If false, mobs will use custom impact levels REGARDLESS of impact-Custom being enabled/disabled.
-Mob-Impact-Damage: 2
-#Custom Explosive Damage from Mobs
-
+#If false, mobs will use GlobalImpact if CustomImpact is not enabled.
+MobImpact: false
+#Explosive Power exclusive to Mobs.
+MobImpactDamage: 2
 
 
 #-----------------------------------------------#
@@ -73,9 +95,8 @@ FishingBobber: false
 #-----------------------------------------------#
 #               Projectile Impacts              #
 #                                               #
-#           MUST ENABLE impact-Custom           #
+#            MUST ENABLE CustomImpact           #
 #-----------------------------------------------#
-
 Egg-Impact: 2
 Arrow-Impact: 5
 Potion-Impact: 3
@@ -83,18 +104,17 @@ Trident-Impact: 10
 Snowball-Impact: 2
 ExpBottle-Impact: 3
 Enderpearl-Impact: 0
-FishingBobber-Impact: 1
+FishingBobber-Impact: 3
 
 
 #-----------------------------------------------#
 #             Miscellaneous Toggles             #
 #-----------------------------------------------#
 
-trident-Teleport: false
 #Fixes issue of tridents getting stuck in mid-air.
-trident-TP-Message: true
+trident-Teleport: false
 #Lets the shooter know their trident was teleported back to them. Only works if trident-Teleport is enabled.
+trident-TP-Message: true
 
+#Not recommended for public servers, used for debugging.
 verbose: false
-#Not recommended for public servers.
-#Used for debugging.
