--- a/src/1.12.2/BombasticProjectiles-1.12.2/pom.xml
+++ b/src/1.12.2/BombasticProjectiles-1.12.2/pom.xml
@@ -6,10 +6,10 @@
 
     <groupId>me.sintaxlabs</groupId>
     <artifactId>2</artifactId>
-    <version>1.0.7</version>
+    <version>1.0.8</version>
     <packaging>jar</packaging>
 
-    <name>BombasticProjectiles-1.21.x</name>
+    <name>BombasticProjectiles-1.12</name>
 
     <properties>
         <java.version>21</java.version>
